Migrate server/mailrepository/mailrepository-cassandra to Cassandra driver 4